Workaround for log4j conflict.
This hides the old log4j classes loaded by Jenkins from the plug-in.
This means that the newer log4j classes are found by xtext. Log4j will
complain though, since the ConsoleAppender and the Appender that it
inherits from are loaded with different class loaders.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
 		</developer>
 	</developers>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jenkins-ci.tools</groupId>
+				<artifactId>maven-hpi-plugin</artifactId>
+				<configuration>
+					<maskClasses>org.apache.log4j.</maskClasses>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -64,5 +76,4 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-
 </project>
