--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Copyright (c) 2013, Cloudsmith Inc.
+  The code, documentation and other materials contained herein
+  are the sole and exclusive property of Cloudsmith Inc. and may
+  not be disclosed, used, modified, copied or distributed without
+  prior written consent or license from Cloudsmith Inc.
+ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
