--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.548</version>
+		<version>1.569</version>
 	</parent>
 
 	<groupId>com.puppetlabs.geppetto</groupId>
@@ -27,7 +27,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.net.id>thhal</java.net.id>
-		<geppetto.version>4.1.1-SNAPSHOT</geppetto.version>
+		<geppetto.version>4.2.0-SNAPSHOT</geppetto.version>
+		<emf.version>2.10.0-v20140514-1158</emf.version>
+		<xtext.version>2.6.1-v201406120726</xtext.version>
 		<nexusServer>https://geppetto-nexus.puppetlabs.com</nexusServer>
 	</properties>
 
@@ -140,6 +142,25 @@
 		</pluginManagement>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.emf</groupId>
+				<artifactId>org.eclipse.emf.common</artifactId>
+				<version>${emf.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.emf</groupId>
+				<artifactId>org.eclipse.emf.ecore</artifactId>
+				<version>${emf.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.emf</groupId>
+				<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+				<version>${emf.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -193,34 +214,41 @@
 			<version>1.0.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jenkinsci.plugins</groupId>
+			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>git</artifactId>
-			<version>1.1.26</version>
+			<version>2.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>org.eclipse.core.runtime</artifactId>
-			<version>3.9.0-v20130326-1255</version>
+			<version>3.10.0-v20140318-2214</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>org.eclipse.core.contenttype</artifactId>
-			<version>3.4.200-v20130326-1255</version>
+			<version>3.4.200-v20140207-1251</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>org.eclipse.core.jobs</artifactId>
-			<version>3.5.300-v20130429-1813</version>
+			<version>3.6.0-v20140424-0053</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.ecore</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-			<version>2.9.1-v20130827-0309</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.equinox</groupId>
 			<artifactId>org.eclipse.equinox.app</artifactId>
-			<version>1.3.100-v20130327-1442</version>
+			<version>1.3.200-v20130910-1609</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.equinox</groupId>
@@ -230,27 +258,27 @@
 		<dependency>
 			<groupId>org.eclipse.equinox</groupId>
 			<artifactId>org.eclipse.equinox.preferences</artifactId>
-			<version>3.5.100-v20130422-1538</version>
+			<version>3.5.200-v20140224-1527</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.equinox</groupId>
 			<artifactId>org.eclipse.equinox.registry</artifactId>
-			<version>3.5.301-v20130717-1549</version>
+			<version>3.5.400-v20140428-1507</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.osgi</groupId>
 			<artifactId>org.eclipse.osgi</artifactId>
-			<version>3.9.1-v20130814-1242</version>
+			<version>3.10.0-v20140606-1445</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.util</artifactId>
-			<version>2.4.3-v201309030823</version>
+			<version>${xtext.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>3.1.0.201310021548-r</version>
+			<version>3.4.1.201406201815-r</version>
 		</dependency>
 	</dependencies>
 </project>
