--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<debug>true</debug>
 				</configuration>
 			</plugin>
 			<plugin>
