--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 	<description>Validates puppet modules and then publishes them to the Puppet Forge</description>
+	<name>Geppetto Puppet Forge Plugin</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
