--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/version.properties
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/version.properties
@@ -1,7 +1,7 @@
 groupId=${pom.groupId}
 artifactId=${pom.artifactId}
 version=${pom.version}
-git.build.time=${git.commit.time}
+git.build.time=${git.build.time}
 git.commit.id=${git.commit.id}
 git.commit.id.abbrev=${git.commit.id.abbrev}
 git.commit.time=${git.commit.time}
