--- a/pom.xml
+++ b/pom.xml
@@ -109,9 +109,9 @@
 			<plugin>
 				<groupId>org.jenkins-ci.tools</groupId>
 				<artifactId>maven-hpi-plugin</artifactId>
-				<configuration>
-					<maskClasses>org.apache.log4j. com.google. antlr. org.antlr. org.aopalliance. org.eclipse. com.puppetlabs.</maskClasses>
-				</configuration>
+<!-- 				<configuration> -->
+<!-- 					<maskClasses>org.apache.log4j. com.google. antlr. org.antlr. org.aopalliance. org.eclipse. com.puppetlabs.</maskClasses> -->
+<!-- 				</configuration> -->
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -195,116 +195,13 @@
 		</dependency>
 		<dependency>
 			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.forge.api</artifactId>
+			<artifactId>com.puppetlabs.geppetto.shaded</artifactId>
 			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.diagnostic</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.forge</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.graph</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.pp.dsl</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.puppetlint</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.geppetto</groupId>
-			<artifactId>com.puppetlabs.geppetto.validation</artifactId>
-			<version>${geppetto.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.puppetlabs.graph</groupId>
-			<artifactId>com.puppetlabs.graph</artifactId>
-			<version>1.0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>git</artifactId>
 			<version>2.2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>org.eclipse.core.runtime</artifactId>
-			<version>3.10.0-v20140318-2214</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>org.eclipse.core.contenttype</artifactId>
-			<version>3.4.200-v20140207-1251</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>org.eclipse.core.jobs</artifactId>
-			<version>3.6.0-v20140424-0053</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.common</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.app</artifactId>
-			<version>1.3.200-v20130910-1609</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.common</artifactId>
-			<version>3.6.200-v20130402-1505</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.preferences</artifactId>
-			<version>3.5.200-v20140224-1527</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.registry</artifactId>
-			<version>3.5.400-v20140428-1507</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.osgi</groupId>
-			<artifactId>org.eclipse.osgi</artifactId>
-			<version>3.10.0-v20140606-1445</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>org.eclipse.xtext.util</artifactId>
-			<version>${xtext.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jgit</groupId>
-			<artifactId>org.eclipse.jgit</artifactId>
-			<version>3.4.1.201406201815-r</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>4.0-beta5</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
