--- a/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/PPProblemsAdvisor/config.properties
+++ b/src/main/resources/com/puppetlabs/geppetto/forge/jenkins/PPProblemsAdvisor/config.properties
@@ -9,6 +9,7 @@ deprecatedPlusEquals=Use of deprecated +=/-= operators (invalid in Puppet >= 4.0
 deprecatedVariableName=Use of variable names that starts with upper case letter or digit (invalid in Puppet >= 4.0)
 dqStringNotRequired=Strings that do not require double quoting
 dqStringNotRequiredVariable=Strings containing a single interpolation
+duplicateParameter=Duplicate parameter
 ensureShouldAppearFirstInResource=Resource property ensure is not stated first
 interpolatedNonBraceEnclosedHyphens=Interpolated hyphen without surrounding '{}'
 missingDefaultInSelector=Missing ''default'' in selector
