--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.net.id>thhal</java.net.id>
-		<geppetto.version>4.3.1-SNAPSHOT</geppetto.version>
-		<emf.version>2.10.0-v20140514-1158</emf.version>
-		<xtext.version>2.7.1-v201409090713</xtext.version>
+		<geppetto.version>4.3.2-SNAPSHOT</geppetto.version>
+		<emf.version>2.10.2-v20150123-0348</emf.version>
+		<xtext.version>2.8.0-v201503090534</xtext.version>
 		<nexusServer>https://geppetto-nexus.puppetlabs.com</nexusServer>
 	</properties>
 
@@ -86,7 +86,7 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.1.11</version>
+				<version>2.1.13</version>
 				<executions>
 					<execution>
 						<goals>
@@ -172,7 +172,7 @@
 			<dependency>
 				<groupId>org.eclipse.emf</groupId>
 				<artifactId>org.eclipse.emf.common</artifactId>
-				<version>${emf.version}</version>
+				<version>2.10.1-v20150123-0348</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.emf</groupId>
@@ -190,7 +190,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
